# SofaPlaneCutting

./: CMakeLists.txt  PlaneCuttingConfig.cmake.in
scenes/: plane_cutting_tetra.scn
src/: PlaneCutting.cpp  PlaneCutting.h  TetrahedronSetTopologyCuttingAlgorithms.cpp  TetrahedronSetTopologyCuttingAlgorithms.h  TetrahedronSetTopologyCuttingAlgorithms.inl  config.h  initPlaneCutting.cpp
